style.css
:root {
  --clr-primary: #02111b;
}
*,
*::before,
*::after {
  box-sizing: border-box;
}
body {
  margin: 0;
  padding: 0;
  font-family: "Montserrat", sans-serif;
}

img {
  max-width: 100%;
}
a {
  text-decoration: none;
  color: inherit;
}
.logo {
  padding: 2em;
  text-align: center;
}
.nav-container {
  width: 100%;
  margin-bottom: 1em;
  font-weight: bold;
  text-transform: uppercase;
}
.menu__list {
  display: flex;
  justify-content: space-around;
  padding: 0;
  list-style: none;
}
header {
  min-height: 100vh;
  background: url("./images/header.jpg");
  background-size: cover;
  background-position: bottom;
  text-align: center;
  padding: 2em;
}
h1 {
  font-size: 2rem;
  margin-top: 3rem;
}
h2, h3 {
 margin-bottom: 3rem;
 text-align: center;
}
.wrapper {
  padding: 1rem 2rem;
}
section {
  margin-bottom: 5rem;
}

.services article {
 position: relative;
  color: white;
  background-color: var(--clr-primary);
  margin: 7rem 0;
  padding: 2em;
  border-radius: 25px;  
  min-height: 500px;
}
.slice {
 position: absolute;
 right:50%;
 bottom:0;
 transform: translate(50%, 50%);
 width: 150px;
 height: 150px;
 background-image: url('./images/slice.png');
 background-size: cover;
 
}
footer {
  min-height: 8vh;
  color: white;
  background-color: var(--clr-primary);
  padding: 1em 2em;
}
footer span {
  font-weight: bold;
}

